[ fix ] - column alignment on small screens

--- a/src/app/shared/scss/components/table.scss
+++ b/src/app/shared/scss/components/table.scss
@@ -23,7 +23,7 @@
             }
 
             .table__td--input {
-                width: 70%;
+                width: 90%;
                 height: 20px;
                 border-width: 2px;
                 border-image-slice: 1;
@@ -36,6 +36,7 @@
 
             mat-label {
                 white-space: normal;
+                font-size: small;
             }
 
             input[matInput] {
@@ -61,6 +62,10 @@
 
 .table-list .table__th:nth-of-type(6) {
     width: 15%;
+}
+
+.table-add:nth-child(3) .table__tbody .table__tr > .table__td .table__td--input {
+    margin-top: 15px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -94,9 +99,13 @@
                     padding-top: 10px;
                     border-bottom: 1px solid #ddd;
 
+                    .table__td--input {
+                        margin-top: 0px !important;
+                    }
+
                     .table__td--group-button-row {
-                        flex-direction: column; // Na mniejszych ekranach przyciski ułożone pod sobą
-                        align-items: flex-start; // Ustawienie przycisków na początku
+                        flex-direction: column;
+                        align-items: flex-start;
                     }
                 }
 
@@ -108,7 +117,16 @@
             }
         }
     }
+
     .table-list .table__tr .table__td:nth-of-type(7) {
         height: auto;
+    }
+
+    .table-add:nth-child(1) .table__tbody .table__tr .table__td {
+        padding: 10px 0px 0px 31px !important;
+    }
+    
+    .table-add:nth-child(3) .table__tbody .table__tr .table__td .table__td--input {
+        width: 222px !important;
     }
 }
